# research_investment_efficiency

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/skills/: README.md
.devcontainer/python/: devcontainer.json
.devcontainer/r/: devcontainer.json
.devcontainer/tex/: devcontainer.json
.github/workflows/: tests.yml
docker/python/: Dockerfile
docker/r/: Dockerfile
docker/tex/: Dockerfile
docs/: input-schema.md  literature-survey.md  machine-setup.md  methodology.md  provenance.md
docs/ai/: pdf-ingestion-p1-notes.md  pdf-ingestion-p1-trial.md  shared-claude-blocks.md
docs/data/: data-catalog.md  data-paths.json
docs/papers/: README.md
examples/: quickstart.py
outputs/enomoto_2024/: accounting_axes.csv  aq_first_stage.csv  aq_first_stage_missing_as_zero_proxy.csv  core_coefficients.csv  manifest.json  missing_as_zero_proxy_break_stability.csv  missing_as_zero_proxy_coefficients.csv  missing_as_zero_proxy_regime_slope_differences.csv  missing_as_zero_proxy_same_period_cfo_comparison.csv  missing_as_zero_proxy_same_period_cfo_samples.csv  missing_as_zero_proxy_samples.csv  missingness_continuity.csv  model_samples.csv  published_sample_benchmark.csv  replication_status.csv  report_ja.md  sample_flow.csv  (+1 more)
paper/: main.tex  references.bib
scripts/: build-pdf.sh  new-project.ps1  sync-manifest.psd1  sync-template-tools.ps1  validate.ps1
tests/: test_enomoto_replication.py  test_labor.py  test_measures.py  test_models.py  test_panel.py  test_registry_cli.py
(+34 files in other folders)
